force-app/main/default/objects/Product_Abbreviation_Map__mdt/Product_Abbreviation_Map__mdt.object-meta.xml
<CustomObject>
    <label>Product Abbreviation Map</label>
    <pluralLabel>Product Abbreviation Maps</pluralLabel>
</CustomObject>