force-app/main/default/objects/Product_Abbreviation_Map__mdt/fields/Expansion__c.field-meta.xml
<CustomField>
    <fullName>Expansion__c</fullName>
    <label>Expansion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>